# solana-stablecoin-standard

./: .gitignore  Anchor.toml  README.md  authority.json  package.json
docs/: ARCHITECTURE.md  CLI.md  COMPLIANCE.md  OPERATIONS.md  ORACLE.md  SDK.md  SSS-1.md  SSS-2.md
programs/stc_program/: Cargo.toml  README.md
programs/stc_program/src/: errors.rs  lib.rs  state.rs
programs/stc_program/src/instructions/: blacklist.rs  burn.rs  freeze.rs  initialize.rs  initialize_permanent_delegate.rs  initialize_sss2.rs  mint.rs  mod.rs  pause.rs  roles.rs  seize.rs  transfer_authority.rs
programs/stc_program/tests/common/: builders.rs  fixtures.rs  helpers.rs  setup.rs
programs/stc_program/tests/integration/: mod.rs  test_blacklist.rs  test_sss1.rs  test_sss2.rs
programs/transfer_hook/: Cargo.toml
programs/transfer_hook/src/: error.rs  lib.rs
programs/transfer_hook/src/instructions/: execute.rs  initialize_extra_account_meta_list.rs
programs/transfer_hook/src/state/: mod.rs
sss-api/: .env  .env.example  ReadMe.md  package-lock.json  package.json
sss-api/src/: helpers.ts  index.ts  solana.ts
sss-api/src/routes/: compliance.ts  mint.ts  operations.ts  roles.ts
sss-demo/: package-lock.json  package.json
sss-demo/app/: layout.tsx  page.tsx  providers.tsx
sss-demo/app/admin/: page.tsx
sss-demo/app/admin/[mint]/: page.tsx
sss-demo/components/: Blacklist.tsx  FreezeThaw.tsx  InitMint.tsx  MintBurn.tsx  WalletContext.tsx  ui.tsx
sss-demo/components/admin/: ComplianceTab.tsx  ConfigTab.tsx  OperationsTab.tsx  RolesTab.tsx
sss-demo/lib/: api.ts  sdk.ts
sss-demo/styles/: global.css
tests/: stc_program.ts
trident-tests/: Trident.toml
trident-tests/fuzz_0/: fuzz_accounts.rs  test_fuzz.rs  types.rs
