[package]
name = "stc_program"
version = "0.1.0"
description = "Solana Stablecoin Standard - Main Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "stc_program"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.32.1", features = ["token_2022", "metadata"] }
spl-token-2022 = { version = "8", features = ["no-entrypoint"] }
spl-token-metadata-interface = "0.5"
spl-pod = "0.5"
spl-type-length-value = "0.8"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }

[dev-dependencies]
litesvm = "0.9.1"
litesvm-token = "0.9.1"
solana-sdk = "3.0.0"
