[package]
name = "transfer_hook"
version = "0.1.0"
description = "Solana Stablecoin Standard - Transfer Hook (SSS-2 Blacklist Enforcement)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "transfer_hook"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = { version = "0.32.1", features = ["token_2022"] }
spl-token-2022 = { version = "8", features = ["no-entrypoint"] }
spl-transfer-hook-interface = "0.10"
spl-tlv-account-resolution = "0.10"
stc_program = { path = "../stc_program", features = ["cpi"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
